# msgpack-haskell

./: .gitignore  .leaf.yml  .travis.yml  BUILD.bazel  LICENSE  README.md  appveyor.yml  cabal.project  cabal.project.floor-ghc-7.8.4  data-msgpack.cabal  msgpack-binary.cabal  stack.yaml
.github/: settings.yml
bench/: benchmark.hs
bench/Data/: MessagePackBench.hs
bench/Data/MessagePack/: IntBench.hs
msgpack/: CHANGES.md  LICENSE  msgpack.cabal
msgpack-aeson/: LICENSE  msgpack-aeson.cabal
msgpack-aeson/src/Data/MessagePack/: Aeson.hs
msgpack-aeson/test/: test.hs
msgpack-idl/: LICENSE  Main.hs  README.md  Specification.md  mpidl.peggy  msgpack-idl.cabal
msgpack-idl-web/: Application.hs  LICENSE  Settings.hs  devel.hs  mpidl-web.cabal
msgpack-idl-web/Handler/: Home.hs
msgpack-idl-web/config/: settings.yml  sqlite.yml
msgpack-idl-web/deploy/: Procfile
msgpack-idl-web/src/: Foundation.hs  Model.hs
msgpack-idl-web/templates/: homepage.hamlet
msgpack-idl/Language/MessagePack/: IDL.hs
msgpack-idl/Language/MessagePack/IDL/: Check.hs  Desugar.hs  Internal.hs  Parser.hs  Syntax.hs
msgpack-idl/Language/MessagePack/IDL/CodeGen/: Cpp.hs  Erlang.hs  Haskell.hs  Java.hs  Perl.hs  Php.hs  Py.hs  Python.hs  Ruby.hs
msgpack-idl/Language/MessagePack/IDL/CodeGen/Cpp/: Client.hs  Config.hs  NameSpace.hs  Server.hs  Type.hs  TypeDecl.hs  Util.hs
msgpack-idl/Language/MessagePack/IDL/CodeGen/Java/: Alias.hs  Client.hs  Config.hs  Decl.hs  Exception.hs  Initialize.hs  Method.hs  Resolve.hs  Server.hs  Struct.hs  Tuple.hs  Util.hs
msgpack-idl/Language/MessagePack/IDL/CodeGen/Python/: Client.hs  Config.hs  Init.hs  Server.hs  Type.hs  TypeDecl.hs  Util.hs
msgpack-idl/Language/MessagePack/IDL/CodeGen/Ruby/: Accessor.hs  AttrWriter.hs  Client.hs  Config.hs  ConvertingType.hs  Module.hs  TypeDecl.hs  Util.hs
msgpack-idl/Language/MessagePack/IDL/Test/: Parser.hs  Syntax.hs  TestMain.hs
msgpack-idl/Language/MessagePack/IDL/Test/CodeGen/Cpp/: Type.hs
msgpack-idl/exec/: Main.hs  main.hs
msgpack-idl/test/: TODO.txt  test.hs
msgpack-idl/test/idls/: empty.idl
msgpack-rpc/: msgpack-rpc.cabal  network-msgpack-rpc.cabal  test.hs
msgpack-rpc/Network/MessagePackRpc/: Client.hs  Server.hs
msgpack-rpc/src/Network/MessagePack/: Client.hs  Server.hs
msgpack-rpc/src/Network/MessagePackRpc/: Client.hs  Server.hs
msgpack-rpc/test/: Cli.hs  test.hs
msgpack-rpc/test/Network/MessagePack/: ServerSpec.hs
msgpack/Data/: MessagePack.hs
msgpack/Data/MessagePack/: Assoc.hs  Derive.hs  Generic.hs  Object.hs  Pack.hs  Unpack.hs
msgpack/Data/MessagePack/Internal/: Utf8.hs
msgpack/src/Compat/: Binary.hs  Prelude.hs
msgpack/src/Data/: MessagePack.hs
msgpack/src/Data/MessagePack/: Assoc.hs  Generic.hs  Get.hs  Integer.hs  Object.hs  Pack.hs  Put.hs  Result.hs  Tags.hs  Timestamp.hs  Unpack.hs
msgpack/src/Data/MessagePack/Get/: Internal.hs
msgpack/test/: DataCases.hs  Properties.hs  Test.hs  test.hs
msgpack/test/Data/MessagePack/: ResultSpec.hs
msgpack/test/data/: 10.nil.yaml  11.bool.yaml  12.binary.yaml  20.number-positive.yaml  21.number-negative.yaml  22.number-float.yaml  23.number-bignum.yaml  30.string-ascii.yaml  31.string-utf8.yaml  32.string-emoji.yaml  40.array.yaml  41.map.yaml  42.nested.yaml  50.timestamp.yaml  60.ext.yaml  README.md
src/Data/: MessagePack.hs
src/Data/MessagePack/: Assoc.hs  Class.hs  Generic.hs  Get.hs  Instances.hs  Object.hs  Option.hs  Put.hs  Result.hs
test/Data/: MessagePackSpec.hs  Result.hs
test/Data/MessagePack/: OptionSpec.hs  ResultSpec.hs
tools/: BUILD.bazel  msgpack-parser.hs
