load("@io_tweag_rules_haskell//haskell:haskell.bzl", "haskell_library", "haskell_test")
load("//tools/project:build_defs.bzl", "project")

project(
    license = "hs-msgpack",
)

haskell_library(
    name = "hs-msgpack",
    srcs = glob(["src/**/*.*hs"]),
    compiler_flags = [
        "-Wall",
        "-Werror",
        "-Wno-unused-imports",
    ],
    src_strip_prefix = "src",
    version = "0.0.12",
    visibility = ["//visibility:public"],
    deps = [
        "//hs-msgpack-types",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:text",
        "@haskell_data_binary_ieee754//:data-binary-ieee754",
    ],
)

haskell_test(
    name = "test",
    srcs = glob(["test/**/*.hs"]),
    compiler_flags = [
        "-Wall",
        "-Werror",
        "-Wno-unused-imports",
    ],
    src_strip_prefix = "test",
    deps = [
        ":hs-msgpack",
        "//hs-msgpack-types",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:containers",
        "//third_party/haskell:text",
        "@haskell_QuickCheck//:QuickCheck",
        "@haskell_hashable//:hashable",
        "@haskell_hspec//:hspec",
        "@haskell_unordered_containers//:unordered-containers",
        "@haskell_vector//:vector",
    ],
)
