load("@ai_formation_hazel//tools:mangling.bzl", "hazel_library")
load("@rules_haskell//haskell:defs.bzl", "haskell_library")
load("//third_party/haskell/hspec-discover:build_defs.bzl", "hspec_test")
load("//tools/project:build_defs.bzl", "project")

project(license = "hs-msgpack")

haskell_library(
    name = "hs-msgpack-binary",
    srcs = glob(["src/**/*.*hs"]),
    compiler_flags = ["-Wno-unused-imports"],
    src_strip_prefix = "src",
    version = "0.0.14",
    visibility = ["//visibility:public"],
    deps = [
        "//hs-msgpack-types",
        hazel_library("base"),
        hazel_library("binary"),
        hazel_library("bytestring"),
        hazel_library("data-binary-ieee754"),
        hazel_library("text"),
    ],
)

hspec_test(
    name = "testsuite",
    size = "small",
    compiler_flags = ["-Wno-unused-imports"],
    deps = [
        ":hs-msgpack-binary",
        "//hs-msgpack-types",
        hazel_library("QuickCheck"),
        hazel_library("base"),
        hazel_library("bytestring"),
        hazel_library("containers"),
        hazel_library("hashable"),
        hazel_library("hspec"),
        hazel_library("text"),
        hazel_library("unordered-containers"),
        hazel_library("vector"),
    ],
)
