name:                 data-msgpack
version:              0.0.2
synopsis:             A Haskell implementation of MessagePack
description:          A Haskell implementation of MessagePack <http://msgpack.org/>
homepage:             http://msgpack.org/
license:              BSD3
license-file:         LICENSE
author:               Hideyuki Tanaka
maintainer:           Iphigenia Df <iphydf@gmail.com>
copyright:            Copyright (c) 2009-2016, Hideyuki Tanaka
category:             Data
stability:            Experimental
cabal-version:        >= 1.10
build-type:           Simple

source-repository head
  type:             git
  location:         https://github.com/TokTok/msgpack-haskell.git

library
  default-language: Haskell2010
  hs-source-dirs:
      src
  exposed-modules:
      Data.MessagePack
      Data.MessagePack.Assoc
      Data.MessagePack.Class
      Data.MessagePack.Generic
      Data.MessagePack.Get
      Data.MessagePack.Object
      Data.MessagePack.Put
      Data.MessagePack.Result
  build-depends:
      base < 5
    , QuickCheck
    , binary
    , bytestring
    , containers
    , data-binary-ieee754
    , deepseq
    , hashable
    , text
    , unordered-containers

test-suite testsuite
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: testsuite.hs
  build-depends:
      base < 5
    , QuickCheck
    , bytestring
    , containers
    , data-msgpack
    , hashable
    , hspec
    , text
    , unordered-containers
