name:                msgpack-aeson
version:             0.1.0.0
synopsis:            Aeson adapter for MessagePack
description:         Aeson adapter for MessagePack
homepage:            http://msgpack.org/
license:             BSD3
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          tanaka.hideyuki@gmail.com
copyright:           (c) 2015 Hideyuki Tanaka
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.MessagePack.Aeson
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base                 >=4.7 && <5
                     , aeson                >=0.8
                     , bytestring           >=0.10
                     , msgpack              >=1.0
                     , scientific           >=0.3
                     , text                 >=1.2
                     , unordered-containers >=0.2
                     , vector               >=0.10
                     , deepseq
  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite msgpack-aeson-test
  type:                exitcode-stdio-1.0
  main-is:             test.hs

  build-depends:       base
                     , msgpack
                     , aeson
                     , msgpack-aeson
                     , tasty
                     , tasty-hunit

  hs-source-dirs:      test
  default-language:    Haskell2010
