cabal-version:       1.12
name:                msgpack-aeson
version:             0.2.0.0

synopsis:            Aeson adapter for MessagePack
description:         Aeson adapter for MessagePack
homepage:            http://msgpack.org/
bug-reports:         https://github.com/msgpack/msgpack-haskell/issues
license:             BSD3
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          Herbert Valerio Riedel <hvr@gnu.org>
copyright:           (c) 2015 Hideyuki Tanaka
category:            Data
build-type:          Simple

source-repository head
  type:             git
  location:         http://github.com/msgpack/msgpack-haskell.git
  subdir:           msgpack-aeson

library
  hs-source-dirs:      src
  exposed-modules:     Data.MessagePack.Aeson

  build-depends:       base                   >= 4.7     && < 4.14
                     , aeson                  >= 0.8.0.2 && < 0.12
                                           || >= 1.0     && < 1.5
                     , bytestring             >= 0.10.4  && < 0.11
                     , msgpack                >= 1.1.0   && < 1.2
                     , scientific             >= 0.3.2   && < 0.4
                     , text                   >= 1.2.3   && < 1.3
                     , unordered-containers   >= 0.2.5   && < 0.3
                     , vector                 >= 0.10.11 && < 0.13
                     , deepseq                >= 1.3     && < 1.5

  default-language:    Haskell2010


test-suite msgpack-aeson-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs

  build-depends:       msgpack-aeson
                     -- inherited constraints via `msgpack-aeson`
                     , base
                     , aeson
                     , msgpack
                     -- test-specific dependencies
                     , tasty              == 1.2.*
                     , tasty-hunit        == 0.10.*

  default-language:    Haskell2010
