Name:                msgpack-idl
Version:             0.1.0
Synopsis:            An IDL Compiler for MessagePack
Description:         An IDL Compiler for MessagePack <http://msgpack.org/>
Homepage:            http://msgpack.org/
License:             BSD3
License-file:        LICENSE
Author:              Hideyuki Tanaka
Maintainer:          Hideyuki Tanaka <tanaka.hideyuki@gmail.com>
Copyright:           Copyright (c) 2011, Hideyuki Tanaka
Category:            Language
Stability:           Experimental
Cabal-version:       >=1.8
Build-type:          Simple

Extra-source-files:  mpidl.peggy

Source-repository head
  Type:                git
  Location:            git://github.com/msgpack/msgpack-haskell.git

Library
  Build-depends:       base             == 4.*
                     , bytestring       == 0.9.*
                     , text             == 0.11.*
                     , shakespeare-text == 0.10.*
                     , blaze-builder    == 0.3.*
                     , template-haskell >= 2.5 && < 2.8
                     , containers       == 0.4.*
                     , filepath         >= 1.2 && < 1.4
                     , msgpack          == 0.7.*
                     , peggy            == 0.3.*

  Ghc-options:         -Wall
  
  Exposed-modules:     Language.MessagePack.IDL
                       Language.MessagePack.IDL.Check
                       Language.MessagePack.IDL.CodeGen.Cpp
                       Language.MessagePack.IDL.CodeGen.Haskell
                       Language.MessagePack.IDL.CodeGen.Java
                       Language.MessagePack.IDL.CodeGen.Perl
                       Language.MessagePack.IDL.CodeGen.Php
                       Language.MessagePack.IDL.CodeGen.Py
                       Language.MessagePack.IDL.CodeGen.Ruby
                       Language.MessagePack.IDL.Parser
                       Language.MessagePack.IDL.Syntax
  
  Other-modules:       

Executable mpidl
  Hs-source-dirs:      exec
  Main-is:             Main.hs

  Build-depends:       base      == 4.*
                     , directory == 1.1.*
                     , cmdargs   == 0.9.*
                     , peggy     == 0.3.*
                     , msgpack-idl
