name:                msgpack-idl
version:             0.2.0
synopsis:            An IDL Compiler for MessagePack
description:         An IDL Compiler for MessagePack <http://msgpack.org/>
homepage:            http://msgpack.org/
license:             BSD3
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          Hideyuki Tanaka <tanaka.hideyuki@gmail.com>
copyright:           Copyright (c) 2011, Hideyuki Tanaka
category:            Language
stability:           Experimental
cabal-version:       >=1.8
build-type:          Simple

extra-source-files:  mpidl.peggy

source-repository head
  type:                git
  location:            git://github.com/msgpack/msgpack-haskell.git

library
  build-depends:       base             == 4.*
                     , bytestring       == 0.9.*
                     , text             == 0.11.*
                     , shakespeare-text == 1.0.*
                     , blaze-builder    == 0.3.*
                     , template-haskell >= 2.5 && < 2.8
                     , containers       >= 0.4
                     , filepath         >= 1.1 && < 1.4
                     , directory
                     , msgpack          == 0.7.*
                     , peggy            == 0.3.*

  ghc-options:         -Wall
  
  exposed-modules:     Language.MessagePack.IDL
                       Language.MessagePack.IDL.Check
                       Language.MessagePack.IDL.CodeGen.Cpp
                       Language.MessagePack.IDL.CodeGen.Haskell
                       Language.MessagePack.IDL.CodeGen.Java
                       Language.MessagePack.IDL.CodeGen.Perl
                       Language.MessagePack.IDL.CodeGen.Php
                       Language.MessagePack.IDL.CodeGen.Python
                       Language.MessagePack.IDL.CodeGen.Ruby
                       Language.MessagePack.IDL.CodeGen.Erlang
                       Language.MessagePack.IDL.Internal
                       Language.MessagePack.IDL.Parser
                       Language.MessagePack.IDL.Syntax

executable mpidl
  hs-source-dirs:      exec
  main-is:             main.hs

  build-depends:       base      == 4.*
                     , directory >= 1.0 && < 1.2
                     , cmdargs   == 0.10.*
                     , peggy     == 0.3.*
                     , msgpack-idl

test-suite mpidl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs

  build-depends:       base      == 4.*
                     , hspec     >= 1.1
                     , msgpack-idl
