name:               msgpack-rpc
version:            1.0.0
synopsis:           A MessagePack-RPC Implementation
description:        A MessagePack-RPC Implementation <http://msgpack.org/>
homepage:           http://msgpack.org/
license:            BSD3
license-file:       LICENSE
author:             Hideyuki Tanaka
maintainer:         Hideyuki Tanaka <tanaka.hideyuki@gmail.com>
copyright:          (c) 2010-2015, Hideyuki Tanaka
category:           Network
stability:	    Experimental
cabal-version:      >=1.10
build-type:         Simple

source-repository head
  type:             git
  location:         git://github.com/msgpack/msgpack-haskell.git

library
  default-language: Haskell2010
  hs-source-dirs:   src

  exposed-modules:  Network.MessagePack.Server
                    Network.MessagePack.Client

  build-depends:    base               >=4.5 && <5
                  , bytestring         >=0.10
                  , text               >=1.2
                  , network            >=2.6
                  , random             >=1.1
                  , mtl                >=2.2
                  , monad-control      >=1.0
                  , conduit            >=1.2
                  , conduit-extra      >=1.1
                  , binary-conduit     >=1.2
                  , exceptions         >=0.8
                  , binary             >=0.7
                  , msgpack            >=1.0

test-suite msgpack-rpc-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          test.hs

  build-depends:    base
                  , mtl
                  , network
                  , async              >=2.0
                  , tasty              >=0.10
                  , tasty-hunit        >=0.9
                  , msgpack-rpc
