cabal-version:      1.12
name:               msgpack-rpc
version:            1.0.0

synopsis:           A MessagePack-RPC Implementation
description:        A MessagePack-RPC Implementation <http://msgpack.org/>
homepage:           http://msgpack.org/
bug-reports:        https://github.com/msgpack/msgpack-haskell/issues
license:            BSD3
license-file:       LICENSE
author:             Hideyuki Tanaka
maintainer:         Herbert Valerio Riedel <hvr@gnu.org>
copyright:          (c) 2010-2015, Hideyuki Tanaka
category:           Network
build-type:         Simple

source-repository head
  type:             git
  location:         http://github.com/msgpack/msgpack-haskell.git
  subdir:           msgpack-rpc

library
  default-language: Haskell2010
  hs-source-dirs:   src

  exposed-modules:  Network.MessagePack.Server
                    Network.MessagePack.Client

  build-depends:    base               >= 4.5     && < 4.13
                  , bytestring         >= 0.10.4  && < 0.11
                  , text               >= 1.2.3   && < 1.3
                  , network            >= 2.6     && < 2.9
                                    || >= 3.0     && < 3.1
                  , mtl                >= 2.2.1   && < 2.3
                  , monad-control      >= 1.0.0.0 && < 1.1
                  , conduit            >= 1.2.3.1 && < 1.3
                  , conduit-extra      >= 1.1.3.4 && < 1.3
                  , binary-conduit     >= 1.2.3   && < 1.3
                  , exceptions         >= 0.8     && < 0.11
                  , binary             >= 0.7.1   && < 0.9
                  , msgpack            >= 1.1.0   && < 1.2

test-suite msgpack-rpc-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          test.hs

  build-depends:    msgpack-rpc
                  -- inherited constraints via `msgpack-rpc`
                  , base
                  , mtl
                  , network
                  -- test-specific dependencies
                  , async              == 2.2.*
                  , tasty              == 1.2.*
                  , tasty-hunit        == 0.10.*
