cabal-version:      1.12
name:               msgpack-rpc
version:            1.0.0

synopsis:           A MessagePack-RPC Implementation
description:        A MessagePack-RPC Implementation <http://msgpack.org/>
homepage:           http://msgpack.org/
bug-reports:        https://github.com/msgpack/msgpack-haskell/issues
license:            BSD3
license-file:       LICENSE
author:             Hideyuki Tanaka
maintainer:         Herbert Valerio Riedel <hvr@gnu.org>
copyright:          (c) 2010-2015, Hideyuki Tanaka
category:           Network
build-type:         Simple

source-repository head
  type:             git
  location:         http://github.com/msgpack/msgpack-haskell.git
  subdir:           msgpack-rpc

library
  default-language: Haskell2010
  hs-source-dirs:   src

  exposed-modules:  Network.MessagePack.Server
                    Network.MessagePack.Client

  build-depends:    base           == 4.14.*
                  , bytestring     == 0.10.*
                  , text           == 1.2.*
                  , network        == 3.1.*
                  , mtl            == 2.2.*
                  , monad-control  == 1.0.*
                  , conduit        == 1.3.*
                  , conduit-extra  == 1.3.*
                  , binary-conduit == 1.3.*
                  , exceptions     == 0.10.*
                  , binary         == 0.8.*
                  , msgpack        == 1.2.*

test-suite msgpack-rpc-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          test.hs

  build-depends:    msgpack-rpc
                  -- inherited constraints via `msgpack-rpc`
                  , base
                  , mtl
                  , network
                  -- test-specific dependencies
                  , async              == 2.2.*
                  , tasty              == 1.2.*
                  , tasty-hunit        == 0.10.*
