cabal-version:      1.12
name:               msgpack
version:            1.0.0

synopsis:           A Haskell implementation of MessagePack
description:        A Haskell implementation of MessagePack <http://msgpack.org/>
homepage:           http://msgpack.org/
bug-reports:        https://github.com/msgpack/msgpack-haskell/issues
license:            BSD3
license-file:       LICENSE
author:             Hideyuki Tanaka
maintainer:         Herbert Valerio Riedel <hvr@gnu.org>
copyright:          Copyright (c) 2009-2015, Hideyuki Tanaka
category:           Data
build-type:         Simple

source-repository head
  type:             git
  location:         http://github.com/msgpack/msgpack-haskell.git
  subdir:           msgpack

library
  default-language: Haskell2010
  other-extensions: LambdaCase, OverloadedLists
  hs-source-dirs:   src

  exposed-modules:  Data.MessagePack
                    Data.MessagePack.Assoc
                    Data.MessagePack.Object
                    Data.MessagePack.Get
                    Data.MessagePack.Put

  build-depends:    base                 >= 4.7     && < 4.13
                  , mtl                  >= 2.1.3.1 && < 2.3
                  , bytestring           >= 0.10.4  && < 0.11
                  , text                 >= 1.2     && < 1.3
                  , containers           >= 0.5.5   && < 0.7
                  , unordered-containers >= 0.2.5   && < 0.3
                  , hashable             >= 1.1.2.4 && < 1.3
                  , vector               >= 0.10.11 && < 0.13
                  , deepseq              >= 1.3     && < 1.5
                  , binary               >= 0.7.1   && < 0.9
                  , data-binary-ieee754  >= 0.4.4   && < 0.5

  ghc-options: -Wall

test-suite msgpack-tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test

  main-is:          test.hs

  build-depends:    msgpack
                  -- inherited constraints via `msgpack`
                  , base
                  , bytestring
                  -- test-specific dependencies
                  , async              == 2.2.*
                  , tasty              == 1.2.*
                  , tasty-quickcheck   == 0.10.*
                  , QuickCheck         == 2.12.*
