cabal-version:      1.12
name:               msgpack
version:            1.1.0.0

synopsis:           A Haskell implementation of MessagePack
description:
  A Haskell implementation of the <http://msgpack.org/ MessagePack> data interchange format.
  MessagePack is a binary format which aims to be compact and supports encoding a superset of the <http://json.org/ JSON> data-model.
  .
  == Related Packages
  .
  A JSON adapter for the <https://hackage.haskell.org/package/aeson aeson> library is provided by the <https://hackage.haskell.org/package/msgpack-aeson msgpack-aeson> package.
  .
  The <http://hackage.haskell.org/package/msgpack-rpc msgpack-rpc> package provides an implementation of the MessagePack-RPC protocol.


homepage:           http://msgpack.org/
bug-reports:        https://github.com/msgpack/msgpack-haskell/issues
license:            BSD3
license-file:       LICENSE
author:             Hideyuki Tanaka
maintainer:         Herbert Valerio Riedel <hvr@gnu.org>
copyright:          Copyright (c) Hideyuki Tanaka 2009-2015,
                              (c) Herbert Valerio Riedel 2019

category:           Data
build-type:         Simple

extra-source-files:
  CHANGES.md
  test/data/README.md
  test/data/10.nil.yaml
  test/data/11.bool.yaml
  test/data/12.binary.yaml
  test/data/20.number-positive.yaml
  test/data/21.number-negative.yaml
  test/data/22.number-float.yaml
  test/data/23.number-bignum.yaml
  test/data/30.string-ascii.yaml
  test/data/31.string-utf8.yaml
  test/data/32.string-emoji.yaml
  test/data/40.array.yaml
  test/data/41.map.yaml
  test/data/42.nested.yaml
  test/data/50.timestamp.yaml
  test/data/60.ext.yaml

source-repository head
  type:             git
  location:         http://github.com/msgpack/msgpack-haskell.git
  subdir:           msgpack

library
  default-language: Haskell2010
  other-extensions: LambdaCase, OverloadedLists
  default-extensions: Trustworthy
  hs-source-dirs:   src

  exposed-modules:  Data.MessagePack
                    Data.MessagePack.Assoc
                    Data.MessagePack.Generic
                    Data.MessagePack.Integer
                    Data.MessagePack.Timestamp
                    Data.MessagePack.Object
                    Data.MessagePack.Get
                    Data.MessagePack.Put

  other-modules:    Data.MessagePack.Tags
                    Data.MessagePack.Result
                    Data.MessagePack.Get.Internal
                    Compat.Binary
                    Compat.Prelude

  build-depends:    base                 >= 4.7     && < 4.14
                  , mtl                  >= 2.2.1   && < 2.3
                  , bytestring           >= 0.10.4  && < 0.11
                  , text                 >= 1.2.3   && < 1.3
                  , containers           >= 0.5.5   && < 0.7
                  , unordered-containers >= 0.2.5   && < 0.3
                  , hashable             >= 1.1.2.4 && < 1.4
                  , vector               >= 0.10.11 && < 0.13
                  , deepseq              >= 1.3     && < 1.5
                  , binary               >= 0.7.1   && < 0.9
                  , semigroups           >= 0.5.0   && < 0.20
                  , time                 >= 1.4.2   && < 1.10
                  , int-cast             >= 0.1.1   && < 0.3
                  , array                >= 0.5.0   && < 0.6

  if !impl(ghc > 8.0)
    build-depends: fail == 4.9.*

  ghc-options: -Wall

  if impl(ghc >= 7.10)
    ghc-options: -fno-warn-trustworthy-safe


test-suite msgpack-tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test

  main-is:          test.hs
  other-modules:    Properties
                    DataCases

  ghc-options: -Wall

  build-depends:    msgpack
                  -- inherited constraints via `msgpack`
                  , base
                  , binary
                  , bytestring
                  , containers
                  , text
                  , time
                  -- test-specific dependencies
                  , async              == 2.2.*
                  , filepath           == 1.3.* || == 1.4.*
                  , HsYAML             >= 0.1.1 && < 0.2
                  , tasty              == 1.2.*
                  , tasty-quickcheck   == 0.10.*
                  , tasty-hunit        == 0.10.*
                  , QuickCheck         == 2.13.*
