load("@ai_formation_hazel//:hazel.bzl", "hazel_library")
load("@io_tweag_rules_haskell//haskell:haskell.bzl", "haskell_binary")

haskell_binary(
    name = "msgpack-parser",
    srcs = ["msgpack-parser.hs"],
    compiler_flags = [
        "-Wall",
        "-Werror",
        "-Wno-unused-imports",
    ],
    deps = [
        "//hs-msgpack",
        hazel_library("base"),
        hazel_library("bytestring"),
        hazel_library("groom"),
    ],
)
