load("@ai_formation_hazel//tools:mangling.bzl", "hazel_library")
load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

haskell_binary(
    name = "msgpack-parser",
    srcs = ["msgpack-parser.hs"],
    compiler_flags = ["-Wno-unused-imports"],
    deps = [
        "//hs-msgpack-binary",
        hazel_library("base"),
        hazel_library("bytestring"),
        hazel_library("groom"),
    ],
)
